--- a/apps/aresalab/public/publications/coordinate_embedding/preview.mdx
+++ b/apps/aresalab/public/publications/coordinate_embedding/preview.mdx
@@ -1,6 +1,6 @@
 ## Abstract
 
-The representation of geographic coordinates as fixed-dimensional vectors---coordinate embedding---has emerged as a fundamental technique in geospatial machine learning. However, existing approaches lack rigorous theoretical foundations, leading to embeddings that may distort spatial relationships in unpredictable ways. This paper presents the **Coordinate Embedding Framework (CEF)**, a mathematically principled approach to transforming geographic coordinates into semantically rich vector representations.
+The representation of geographic coordinates as fixed-dimensional vectors—coordinate embedding—has emerged as a fundamental technique in geospatial machine learning. However, existing approaches lack rigorous theoretical foundations, leading to embeddings that may distort spatial relationships in unpredictable ways. This paper presents the **Coordinate Embedding Framework (CEF)**, a mathematically principled approach to transforming geographic coordinates into semantically rich vector representations.
 
 Our theoretical contributions establish:
 
@@ -12,9 +12,9 @@ Our theoretical contributions establish:
 
 4. **Computational Complexity**: We analyze time and space complexity, achieving $O(k \cdot n + d^2)$ embedding time for $n$ coordinates with $k$ nearest-neighbor queries and $d$-dimensional output.
 
-Experimental evaluation on 546,247 California addresses demonstrates that CEF achieves distance preservation error (DPE) of 0.089---4× better than prior methods---while maintaining 20,000 embeddings/second throughput. These results establish CEF as a rigorous foundation for geospatial representation learning with provable guarantees.
+Experimental evaluation on 546,247 California addresses demonstrates that CEF achieves distance preservation error (DPE) of 0.089—4× better than prior methods—while maintaining 20,000 embeddings/second throughput. These results establish CEF as a rigorous foundation for geospatial representation learning with provable guarantees.
 
----
+—
 
 **Keywords:** Coordinate Embedding, Geospatial Representation Learning, Bi-Lipschitz Maps, Feature Extraction, Metric Geometry
 
@@ -26,9 +26,9 @@ Experimental evaluation on 546,247 California addresses demonstrates that CEF ac
 
 ## The Problem of Geographic Representation
 
-Geographic coordinates---latitude and longitude pairs---are the fundamental atoms of geospatial data. Yet these two-dimensional numbers are remarkably impoverished representations. The coordinates (38.4404, -122.7141) denote a specific location in Sonoma County, California, but reveal nothing about what makes that location meaningful: its elevation above sea level, proximity to fire hazard zones, vegetation density, road accessibility, or historical patterns of natural disasters.
+Geographic coordinates—latitude and longitude pairs—are the fundamental atoms of geospatial data. Yet these two-dimensional numbers are remarkably impoverished representations. The coordinates (38.4404, -122.7141) denote a specific location in Sonoma County, California, but reveal nothing about what makes that location meaningful: its elevation above sea level, proximity to fire hazard zones, vegetation density, road accessibility, or historical patterns of natural disasters.
 
-This representational poverty creates a fundamental challenge for machine learning on geospatial data. Standard neural network architectures process vectors through continuous transformations, learning to extract patterns from high-dimensional representations. When geographic data enters these systems as raw coordinate pairs, the networks must learn from scratch that (38.4404, -122.7141) and (38.4405, -122.7140)---separated by approximately 15 meters---share virtually identical environmental contexts, while (38.4404, -122.7141) and (38.4404, -122.9141)---separated by 18 kilometers---may have dramatically different risk profiles.
+This representational poverty creates a fundamental challenge for machine learning on geospatial data. Standard neural network architectures process vectors through continuous transformations, learning to extract patterns from high-dimensional representations. When geographic data enters these systems as raw coordinate pairs, the networks must learn from scratch that (38.4404, -122.7141) and (38.4405, -122.7140)—separated by approximately 15 meters—share virtually identical environmental contexts, while (38.4404, -122.7141) and (38.4404, -122.9141)—separated by 18 kilometers—may have dramatically different risk profiles.
 
 The success of embedding methods in natural language processing [@mikolov2013word2vec; @pennington2014glove] and graph learning [@grover2016node2vec] suggests a solution: transform coordinates into dense vector representations that encode semantic relationships. A well-designed embedding would place geographically proximate locations close together in vector space while also capturing relevant contextual features like terrain, infrastructure, and environmental conditions.
 
