--- a/apps/aresalab/public/publications/geoai_agentic_flow/preview.mdx
+++ b/apps/aresalab/public/publications/geoai_agentic_flow/preview.mdx
@@ -10,11 +10,11 @@ Our contributions are threefold:
 
 3. **Multi-Agent Collaboration Protocol (MACP)**: We formalize a 128-agent system organized into specialized pools, proving convergence guarantees for our weighted consensus mechanism and establishing fault tolerance bounds.
 
-Rigorous evaluation on California fire hazard data (546,000+ addresses, 1,955 fire hazard zones) demonstrates that GeoAI Agentic Flow achieves **89.7% risk classification accuracy** with **sub-100ms inference latency** at scale---a 40% improvement in throughput over traditional GIS pipelines while maintaining geospatial accuracy within **15 meters**.
+Rigorous evaluation on California fire hazard data (546,000+ addresses, 1,955 fire hazard zones) demonstrates that GeoAI Agentic Flow achieves **89.7% risk classification accuracy** with **sub-100ms inference latency** at scale—a 40% improvement in throughput over traditional GIS pipelines while maintaining geospatial accuracy within **15 meters**.
 
 These results establish GeoAI Agentic Flow as a principled foundation for real-time environmental intelligence, with immediate applications in wildfire response, flood prediction, and climate adaptation planning.
 
----
+—
 
 **Keywords:** GeoAI, Coordinate Embedding, Multi-Agent Systems, Spatial Intelligence, Fire Hazard Assessment, Graph Neural Networks
 
@@ -28,7 +28,7 @@ These results establish GeoAI Agentic Flow as a principled foundation for real-t
 
 California experienced 8,619 wildfires in 2023 alone, burning over 325,000 acres and threatening millions of structures across 58 counties. Traditional Geographic Information Systems (GIS), while powerful for static analysis, struggle to meet the demands of real-time risk assessment where decisions must be made in seconds rather than hours. The fundamental limitation is not computational power but architectural: existing systems treat geographic coordinates as mere numbers rather than semantic entities embedded in rich spatial context.
 
-Consider the challenge facing emergency planners during the October 2017 Sonoma County fires. Within the first 3 hours, responders needed to assess fire risk for approximately 200,000 residential addresses spread across varied terrain---from dense urban centers to remote hillside communities. Traditional GIS workflows required sequential queries against multiple data layers (topography, vegetation, historical fire perimeters, infrastructure proximity), each query consuming precious minutes. By the time comprehensive assessments were complete, the fire had already jumped containment lines.
+Consider the challenge facing emergency planners during the October 2017 Sonoma County fires. Within the first 3 hours, responders needed to assess fire risk for approximately 200,000 residential addresses spread across varied terrain—from dense urban centers to remote hillside communities. Traditional GIS workflows required sequential queries against multiple data layers (topography, vegetation, historical fire perimeters, infrastructure proximity), each query consuming precious minutes. By the time comprehensive assessments were complete, the fire had already jumped containment lines.
 
 This paper introduces **GeoAI Agentic Flow**, an architecture designed from first principles to address these challenges. Our approach reconceptualizes spatial intelligence through three interlocking innovations.
 
@@ -47,7 +47,7 @@ Critically, we prove that CEF preserves the essential property of spatial distan
 
 Once coordinates are embedded, our Spatial Neural Network (SNN) applies graph-based reasoning to capture relationships that transcend simple proximity. The key insight is that fire risk is not merely a function of local conditions but depends on complex spatial patterns: how fire spreads through fuel corridors, how terrain channels wind patterns, how infrastructure creates both barriers and accelerants.
 
-The SNN constructs dynamic graphs where embedded addresses form nodes and spatial relationships form edges. Multi-head attention mechanisms allow the network to simultaneously consider multiple types of spatial relationships---topographic adjacency, fire spread pathways, evacuation route connectivity---producing a unified risk assessment that no single-layer analysis could achieve.
+The SNN constructs dynamic graphs where embedded addresses form nodes and spatial relationships form edges. Multi-head attention mechanisms allow the network to simultaneously consider multiple types of spatial relationships—topographic adjacency, fire spread pathways, evacuation route connectivity—producing a unified risk assessment that no single-layer analysis could achieve.
 
 ## Multi-Agent Collaboration
 
@@ -58,7 +58,7 @@ The computational demands of processing hundreds of thousands of addresses in re
 3. **Seismic Agents (32)**: Focused on ground stability, fault proximity, and liquefaction risk
 4. **Analytics Agents (32)**: Cross-domain synthesizers that integrate multi-hazard assessments
 
-The agents operate asynchronously but coordinate through a weighted consensus mechanism that we prove converges to optimal assessments under mild conditions (Theorem 6). This distributed architecture achieves linear scalability---doubling agents approximately doubles throughput---while maintaining assessment quality through redundancy and cross-validation.
+The agents operate asynchronously but coordinate through a weighted consensus mechanism that we prove converges to optimal assessments under mild conditions (Theorem 6). This distributed architecture achieves linear scalability—doubling agents approximately doubles throughput—while maintaining assessment quality through redundancy and cross-validation.
 
 ## Contributions and Roadmap
 
