--- a/apps/aresalab/public/publications/fire_safety_dashboard/preview.mdx
+++ b/apps/aresalab/public/publications/fire_safety_dashboard/preview.mdx
@@ -16,7 +16,7 @@ We developed an interactive analytics dashboard using Python's Gradio framework 
 
 Fire departments face increasing pressure to optimize resource allocation while maintaining rapid response capabilities. In Allegheny County, which encompasses Pittsburgh and 129 surrounding municipalities, fire services respond to hundreds of thousands of emergency incidents annually. Understanding the spatial and temporal distribution of these incidents is critical for strategic planning, resource deployment, and community risk reduction programs.
 
-Public safety agencies increasingly recognize the value of data-driven decision making [@nfpa2023]. However, many departments lack the analytical capabilities to extract actionable insights from their operational data. This research addresses that gap by analyzing a decade of emergency dispatch records to identify patterns that can inform policy and resource allocation decisions.
+Public safety agencies increasingly recognize the value of data-driven decision making . However, many departments lack the analytical capabilities to extract actionable insights from their operational data. This research addresses that gap by analyzing a decade of emergency dispatch records to identify patterns that can inform policy and resource allocation decisions.
 
 The Western Pennsylvania Regional Data Center (WPRDC) maintains comprehensive records of emergency dispatches, providing a unique opportunity for longitudinal analysis. This dataset captures the full spectrum of fire department responses, from structure fires to medical assists, enabling systematic examination of incident patterns and resource demands.
 
@@ -32,7 +32,7 @@ This study pursues three primary objectives:
 
 ## Public Safety Context
 
-Fire departments provide multiple critical services beyond fire suppression, including emergency medical response, hazardous materials incidents, and rescue operations. However, a growing challenge facing departments nationwide is the proliferation of false alarms from automated detection systems. These false alarms divert resources from genuine emergencies, increase operational costs, and contribute to responder fatigue [@hall2020].
+Fire departments provide multiple critical services beyond fire suppression, including emergency medical response, hazardous materials incidents, and rescue operations. However, a growing challenge facing departments nationwide is the proliferation of false alarms from automated detection systems. These false alarms divert resources from genuine emergencies, increase operational costs, and contribute to responder fatigue .
 
 Allegheny County's diverse geography—ranging from dense urban neighborhoods in Pittsburgh to rural townships—creates varied risk profiles and resource requirements. Understanding how incident patterns differ across this landscape is essential for equitable and efficient service delivery.
 
