--- a/apps/aresalab/public/publications/multi_agent_coordination/preview.mdx
+++ b/apps/aresalab/public/publications/multi_agent_coordination/preview.mdx
@@ -14,8 +14,6 @@ Our theoretical contributions establish:
 
 Experimental evaluation on California fire hazard data demonstrates that the 128-agent MACP achieves **89.7% classification accuracy**—6.3 percentage points better than single-model baselines—with **93% scaling efficiency** up to 256 agents. Real-world deployment processes 546,000+ addresses in under 35 seconds.
 
-—
-
 **Keywords:** Multi-Agent Systems, Consensus Protocols, Byzantine Fault Tolerance, Environmental Risk Assessment, Distributed Computing
 
 **Mathematics Subject Classification:** 68T42 (Agent Technology), 68W15 (Distributed Algorithms), 62F10 (Point Estimation)
@@ -34,7 +32,7 @@ This coordination challenge motivates our work on multi-agent systems for geospa
 
 ## Multi-Agent Systems for Geospatial Intelligence
 
-Multi-agent systems (MAS) have been studied extensively in distributed computing [@lynch1996distributed], robotics [@jadbabaie2003coordination], and game theory [@marden2009game]. The fundamental insight is that complex problems can often be decomposed into subproblems handled by specialized agents, with coordination mechanisms combining their outputs.
+Multi-agent systems (MAS) have been studied extensively in distributed computing , robotics , and game theory . The fundamental insight is that complex problems can often be decomposed into subproblems handled by specialized agents, with coordination mechanisms combining their outputs.
 
 For geospatial risk assessment, this decomposition is natural:
 
