--- a/apps/aresalab/public/publications/practical_ml/preview.mdx
+++ b/apps/aresalab/public/publications/practical_ml/preview.mdx
@@ -1,4 +1,4 @@
-# Abstract {.unnumbered}
+# Preview
 
 ## Table of Contents
 
@@ -80,8 +80,6 @@
 - **Appendix B**: Performance Optimization and Scaling
 - **Appendix C**: Model Interpretability and Explainability
 - **Appendix D**: Deployment Strategies and Production Considerations
-
-—
 
 ---
 
