--- a/apps/aresalab/public/publications/spotify_popularity/preview.mdx
+++ b/apps/aresalab/public/publications/spotify_popularity/preview.mdx
@@ -16,9 +16,9 @@ The final model achieved a ROC AUC of 0.675 with robust cross-validation perform
 
 ## Background and Motivation
 
-The digital music streaming industry has transformed how millions of people discover and consume music globally. Spotify, with over 500 million active users, generates massive amounts of listening data that reflect collective musical preferences. Understanding what makes a song popular on such platforms has significant implications for multiple stakeholders: artists seeking to optimize their creative output, record labels allocating marketing resources, and streaming platforms curating personalized recommendations [@spotify2024].
+The digital music streaming industry has transformed how millions of people discover and consume music globally. Spotify, with over 500 million active users, generates massive amounts of listening data that reflect collective musical preferences. Understanding what makes a song popular on such platforms has significant implications for multiple stakeholders: artists seeking to optimize their creative output, record labels allocating marketing resources, and streaming platforms curating personalized recommendations .
 
-Previous research in music information retrieval has established that audio features can predict various aspects of musical preference [@bertin2011]. However, the relationship between technical audio characteristics and mainstream popularity remains complex and context-dependent. Genre-specific listening patterns, cultural trends, and non-acoustic factors like artist reputation all contribute to a song's success on streaming platforms.
+Previous research in music information retrieval has established that audio features can predict various aspects of musical preference . However, the relationship between technical audio characteristics and mainstream popularity remains complex and context-dependent. Genre-specific listening patterns, cultural trends, and non-acoustic factors like artist reputation all contribute to a song's success on streaming platforms.
 
 ## Research Questions
 
