--- a/apps/aresalab/public/publications/mathematical_awakening/preview.mdx
+++ b/apps/aresalab/public/publications/mathematical_awakening/preview.mdx
@@ -1,4 +1,4 @@
-# Abstract {.unnumbered}
+# Preview
 
 ## Table of Contents
 
@@ -114,8 +114,6 @@
 ### **Companion Volume: Advanced Practical Applications**
 
 This mathematical foundation prepares you for the companion volume **"Advanced Machine Learning and AI Projects: From Mathematical Theory to Real-World Implementation"**, which presents 50 comprehensive projects spanning healthcare, robotics, environmental science, finance, and cutting-edge AI applications. The companion volume demonstrates how to apply these mathematical foundations to solve complex, real-world problems using state-of-the-art machine learning techniques.
-
-—
 
 ---
 
